# traceprompt-node

./: .gitignore  CHANGELOG.md  README.md  package.json
node/: .tracepromptrc.yml  README.md  package.json  tsconfig.json  tsup.config.ts
node/src/: config.ts  index.ts  metrics.ts  types.ts  wrapper.ts
node/src/crypto/: encryptor.ts  hasher.ts
node/src/keyring/: index.ts
node/src/network/: transport.ts  transporter.ts
node/src/queue/: batcher.ts  flusher.ts  persistentBatcher.ts
node/src/utils/: logger.ts  retry.ts  tokenCounter.ts
python/: pyproject.toml
sdk/: .gitignore  package.json  tsconfig.json  vitest.config.ts
sdk/src/: buffer.ts  flush-worker.ts  hash.ts  index.ts  logger.ts  otel.ts  redactor.ts  ring-buffer.ts  types.ts  wal.ts
sdk/src/schema/: audit-entry.ts
sdk/src/utils/: hash.ts  index.ts  otel.ts  state.ts
sdk/tests/integration/: sdk-integration.test.ts
sdk/tests/unit/: buffer.test.ts  flush-worker.test.ts  hash.test.ts  redactor.test.ts
src/: config.ts  wrapper.ts
src/crypto/: encryptor.ts
src/queue/: persistentBatcher.ts
src/utils/: bundle.ts  logger.ts
