[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "traceprompt"
dynamic = ["version"]
description = "Audit-ready, client-side encrypted logging SDK for LLM apps"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [
    { name = "Traceprompt Team" },
]
keywords = ["llm", "audit", "encryption", "logging", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "cryptography>=41.0.0",
    "boto3>=1.26.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "merkletools>=1.0.3",
    "blake3>=0.3.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/traceprompt/traceprompt"
Documentation = "https://docs.traceprompt.dev"
Repository = "https://github.com/traceprompt/traceprompt.git"
Issues = "https://github.com/traceprompt/traceprompt/issues"

[tool.hatch.version]
path = "src/traceprompt/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/traceprompt"]

[tool.black]
target-version = ["py38"]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=traceprompt"
testpaths = [
    "tests",
] 